feat: provide nutrients and portions in api
